--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
             <p>A Software Engineer & Full Stack Developer, specialization in Cybersecurity.</p>
 			<br></br>
             <a href="mailto:saisree.alaparthi@gmail.com" class="btn">Hire Me</a>
-            <a href="Saisree_Resume.pdf" class="btn">Download Resume</a>
+			<a href="#contact" style="text-decoration: none; padding: 10px 20px; background-color: #007BFF; color: white; border-radius: 5px; display: inline-block;">Let's Connect</a>
+            <a href="Saisree_Resume_SE.pdf" class="btn">Download Resume</a>
         </div>
     </section>
 
@@ -67,23 +68,27 @@
         <div class="skills-grid">
             <div class="skill-panel">
                 <h3><i class="fas fa-code"></i> Programming Languages</h3>
-                <p>Java, Python, C, HTML, CSS, XML</p>
+                <p>Java, Python, C, JavaScript, Swift HTML, CSS, XML</p>
             </div>
             <div class="skill-panel">
                 <h3><i class="fas fa-database"></i> Database</h3>
-                <p>MySQL, Oracle</p>
+                <p>MySQL, PostgreSQL, Oracle</p>
             </div>
             <div class="skill-panel">
                 <h3><i class="fas fa-cloud"></i> Cloud & DevOps</h3>
-                <p>AWS, Azure, Docker, Jenkins, Git, Django</p>
+                <p>AWS, Azure, Docker, Jenkins, Git, Django, Kibana, Datadog, Prometheus, Grafana </p>
+            </div>
+			<div class="skill-panel">
+                <h3><i class="fas fa-cogs"></i> Development Frameworks</h3>
+                <p>React.js, Node.js, Android Development, JSON, RESTful APIs, Spring Boot, Hibernate, Angular </p>
             </div>
             <div class="skill-panel">
                 <h3><i class="fas fa-shield-alt"></i> Cybersecurity</h3>
-                <p>Ethical Hacking, VAPT, Penetration Testing</p>
+                <p>Ethical Hacking, Phishing, VAPT, Penetration Testing</p>
             </div>
 			<div class="skill-panel">
                 <h3><i class="fas fa-tools"></i> Tools & Platforms </h3>
-                <p>VirtualBox, Data Analysis, Wireshark, Cisco Packet Tracker</p>
+                <p>Microsoft Office 365, VirtualBox, Data Analysis, Wireshark, Cisco Packet Tracker, Ubuntu, Hash Calc</p>
             </div>
         </div>
     </div>
@@ -138,14 +143,70 @@
 <section id="experience">
     <div class="container">
         <h2>Experience</h2>
-        <div class="experience-grid">
-            <!-- Card 1: Cybersecurity Virtual Internship -->
+        <div class="experience-grid">  
+			<!-- Card 1: Software Engineer -->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <!-- Front Side -->
+                    <div class="flip-card-front">
+                        <img src="freelancer.jpg" alt="Software Engineer">
+                        <h3>Software Engineer </h3>
+						<h3>March 22 - May 25</h3>
+                    </div>
+                    <!-- Back Side -->
+                    <div class="flip-card-back">
+                        <h4>Freelancer</h4>
+                        <p>Built full-stack web/mobile apps using React.js, Spring Boot, and Android SDK. Automated CI/CD pipelines with Docker, Jenkins, and GitHub Actions; deployed apps on AWS and Azure.</p>
+						<p>Designed and scaled MySQL and PostgreSQL databases. Applied Agile methodologies for team collaboration and project delivery</p>
+                        <p><strong>Tech Stack:</strong> React.js,Spring Boot, Android SDK, Docker, Jenkins, GitHub Actions, AWS, Azure, MySQL, PostgreSQL, Agile Methodologies </span></p> 
+					</div>
+                </div>
+            </div>
+			<!-- Card 2: Cybersecurity Analyst Internship -->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <!-- Front Side -->
+                    <div class="flip-card-front">
+                        <img src="skillweed.jpg" alt="Cybersecurity Analyst Internship">
+                        <h3>Cybersecurity Analyst Intern</h3>
+						<h3>Feburary 25 - May 25</h3>
+                    </div>
+                    <!-- Back Side -->
+                    <div class="flip-card-back">
+                        <h4>Skillweed</h4>
+                        <p>Conducted IT Risk Assessments and improved Third Party Risk Management (TPRM). Created SBAR reports to address and mitigate potential security threats.</p>
+						<p>Aligned processes with NIST CSF 2.0 standards to improve the organization's security posture. Used security tools and frameworks for monitoring and incident response.</p>
+                        <p><strong>Tech Stack:</strong> IT Risk Management, Third Party Risk Management (TPRM), SBAR Reporting, NIST CSF 2.0, Security Monitoring Tools, Incident Response Frameworks, Stakeholder Communication </span></p> 
+					</div>
+                </div>
+            </div>
+			<!-- Card 3: Software Engineering Virtual Experience -->
+            <div class="flip-card">
+                <div class="flip-card-inner">
+                    <!-- Front Side -->
+                    <div class="flip-card-front">
+                        <img src="jpmorgon.jpg" alt="Software Engineering Virtual Experience">
+                        <h3>Software Engineering Virtual Experience</h3>
+						<h3>March 25</h3>
+                    </div>
+                    <!-- Back Side -->
+                    <div class="flip-card-back">
+                        <h4>JPMorgan Chase & Co. (Forage)</h4>
+                        <p>Developed a real-time financial dashboard using React.js and REST APIs.</p>
+						<p>Optimized data processing performance and contributed to documentation and internal developer tools.</p>
+                        <p><strong>Tech Stack:</strong> React.js, REST APIs, Performance Optimization, Technical Documentation, Developer Tool Familiarity </span></p> 
+					</div>
+                </div>
+            </div>
+		
+            <!-- Card 4: Cybersecurity Virtual Internship -->
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <!-- Front Side -->
                     <div class="flip-card-front">
                         <img src="cybersecurity.jpg" alt="Cybersecurity Virtual Internship">
-                        <h3>Cybersecurity Virtual Internship</h3>
+                        <h3>Cybersecurity Intern</h3>
+						<h3>March 22 - May 22</h3>
                     </div>
                     <!-- Back Side -->
                     <div class="flip-card-back">
@@ -158,13 +219,14 @@
                 </div>
             </div>
             
-            <!-- Card 2: Ethical Hacking Training -->
+            <!-- Card 5: Ethical Hacking Training -->
             <div class="flip-card">
                 <div class="flip-card-inner">
                     <!-- Front Side -->
                     <div class="flip-card-front">
                         <img src="ethical-hacking.jpg" alt="Ethical Hacking Training">
                         <h3>Ethical Hacking Training</h3>
+						<h3>June 21 - August 21</h3>
                     </div>
                     <!-- Back Side -->
                     <div class="flip-card-back">
@@ -437,27 +499,45 @@ function scrollCarousel(direction) {
     <section id="project">
     <div class="container">
         <h2>Projects</h2>
-        <div class="project">
-            <h3 class="project-title" data-project="weather-app">Weather App</h3>
-            <p>A React-based weather forecasting app fetching real-time data from the OpenWeatherMap API.</p>
+		<div class="project">
+            <h3 class="project-title" data-project="quantum">Quantum Algorithms: Grover’s Search Implementation | Feburary 2025 - April 2025</h3>
+            <p>Implemented Grover's Algorithm using IBM Qiskit to demonstrate quantum speedup in unstructured search problems.</p>
 			  <p><strong>Tech Stack:</strong> React, OpenWeatherMap API, HTML, CSS, Font Awesome.</span></p>
+        </div>
+		
+        <div class="project">
+            <h3 class="project-title" data-project="weather-app">Weather App | Jan 2025</h3>
+            <p>A React-based weather forecasting app fetching real-time data from the OpenWeatherMap API.</p>
+			  <p><strong>Tech Stack:</strong> Qiskit, Quantum Computing, Grover’s Algorithm, Quantum Circuit Simulation, Real Quantum Hardware Execution</span></p>
+        </div>
+		
+		<div class="project">
+            <h3 class="project-title" data-project="ir">Design and Evaluation of a Vector-Based Information Retrieval System | Jan 2024 - Mar 2024</h3>
+            <p>Developed a full-featured vector-space-based information retrieval (IR) system from scratch using Python and scikit-learn.</p>
+			  <p><strong>Tech Stack:</strong> Python (Programming Language), Scikit-Learn, Text Preprocessing, Natural Language Processing (NLP), Binary Vectorization</span></p>
+        </div>
+		
+		<div class="project">
+            <h3 class="project-title" data-project="dc">Distributed Network Design using Cisco Packet Tracer | Feb 2024 - Apr 2024</h3>
+            <p>Designed and implemented a distributed network model using Cisco Packet Tracer, including subnetting, IP allocation, and inter-device communication.</p>
+			  <p><strong>Tech Stack:</strong> Cisco Packet Tracer, Subnetting, IP Addressing, Routers & Switches Configuration, Binary Network Calculations, Data Network Design, Ping Testing, Subnet Masking</span></p>
         </div>
 
         <div class="project">
-            <h3 class="project-title" data-project="hospital-system">Intelligent Hospital Management System</h3>
+            <h3 class="project-title" data-project="hospital-system">Intelligent Hospital Management System | April 2023</h3>
             <p>Developed a scalable hospital management system with Java and Spring Framework.</p>
 			<p><strong>Tech Stack:</strong> Java Database Connectivity (JDBC), JavaScript, HTML, Cascading Style Sheets (CSS),</p>
 			<p> Spring Framework, XML, Servlets.</span></p>
         </div>
 
         <div class="project">
-            <h3 class="project-title" data-project="insurance-system">Health and Life Insurance System</h3>
+            <h3 class="project-title" data-project="insurance-system">Health and Life Insurance System | December 2022</h3>
             <p>Created a dynamic insurance portal with Django and MySQL.</p>
 			<p><strong>Tech Stack:</strong> SQL, Django</span></p>
         </div>
 
         <div class="project">
-            <h3 class="project-title" data-project="banking-system">Banking and Finance System</h3>
+            <h3 class="project-title" data-project="banking-system">Banking and Finance System | April 2022</h3>
             <p>Designed a Java-based secure banking system with Angular CLI and MySQL.</p>
 			<p><strong>Tech Stack:</strong> Visual Studio, Angular CLI, SQL</span></p>
         </div>
@@ -484,7 +564,7 @@ function scrollCarousel(direction) {
                     <img src="wright-state-logo.jpg" alt="Wright State University Logo" class="edu-logo">
                     <h3>Wright State University</h3>
                     <p><strong>Master of Science - MS, Computer Science</strong></p>
-                    <p>Aug 2023 - May 2025 | GPA: 3.5</p>
+                    <p>Aug 2023 - May 2025 | GPA: 3.6</p>
                     <p><strong>Activities:</strong> Student Worker (FSW), Table Tennis, Swimming, Content Writing, Learning new things.</p>
                 </div>
             </div>
